@@ -135,6 +135,8 @@ AM_GLIB_GNU_GETTEXT
 
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
+AM_PATH_PYTHON([2.3],[],[no])
+
 AC_CONFIG_FILES([
 Makefile
 libdevhelp-1.0.pc
@@ -143,6 +145,8 @@ po/Makefile.in
 src/Makefile
 ui/Makefile
 misc/Makefile
+misc/gedit-plugin/Makefile
+misc/gedit-plugin/devhelp/Makefile
 contrib/Makefile
 devhelp.desktop.in
 ])
