@@ -1,2 +1,4 @@
+SUBDIRS = gedit-plugin
+
 EXTRA_DIST = devhelp.el devhelp.vim html2funcs.py html2xml.py man2xml.py
 
