@@ -1,0 +1,9 @@
+[Gedit Plugin]
+Loader=python
+Module=devhelp
+IAge=2
+_Name=Devhelp support
+_Description=Makes F7 bring up Devhelp for the word at the cursor
+Authors=Richard Hult
+Copyright=Copyright © 2006 Richard Hult
+Website=http://people.imendio.com/richard/
