@@ -1,0 +1,4 @@
+plugindir = $(libdir)/gedit-2/plugins/devhelp
+
+plugin_PYTHON = \
+	__init__.py
