@@ -1,3 +1,8 @@
+2006-03-29  Richard Hult  <richard@imendio.com>
+
+	* POTFILES.in: Add plugin file.
+	* sv.po: Update.
+
 2006-03-22  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Wouter Bolsterlee.
